[gd_scene load_steps=6 format=2]

[ext_resource path="res://actors/items/bottle/bottle_small.png" type="Texture" id=1]
[ext_resource path="res://actors/items/bottle/bottle.gd" type="Script" id=2]
[ext_resource path="res://actors/items/bottle/bottle_big.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 11 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.5, 6 )

[node name="Bottle" type="Node2D"]
script = ExtResource( 2 )

[node name="BottleBig" type="Area2D" parent="."]
visible = false
monitoring = false
collision_layer = 0
collision_mask = 2147483650

[node name="Sprite" type="Sprite" parent="BottleBig"]
position = Vector2( 0, -2 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottleBig"]
shape = SubResource( 1 )

[node name="BottleSmall" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2147483650

[node name="Sprite" type="Sprite" parent="BottleSmall"]
position = Vector2( 0, -1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottleSmall"]
shape = SubResource( 2 )
[connection signal="body_entered" from="BottleBig" to="." method="_on_BottleBig_body_entered"]
[connection signal="body_entered" from="BottleSmall" to="." method="_on_BottleSmall_body_entered"]
